src/objects/Async_Task__c.object
<CustomObject>
    <fields>
        <fullName>Aync_Job__c</fullName>
        <label>Aync Job</label>
        <referenceTo>Async_Job__c</referenceTo>
        <relationshipName>Aync_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Async Task</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Async Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>